# scws_parser

./: .gitignore  CHANGELOG  COPYRIGHT  META.json  Makefile  README.md  auto_install.sh  check.sh  dict_extra.txt  scws_parser--1.0.sql  scws_parser--unpackaged--1.0.sql  scws_parser.c  scws_parser.control  scws_parser.h
conf/: rules.utf8.ini  scws_parser--unpackaged--1.0.sql
scws-1.2.2/: Makefile  config.status  libtool
scws-1.2.2/cli/: Makefile
scws-1.2.2/cli/.deps/: gen_dict.Po  scws_cmd.Po
scws-1.2.2/etc/: Makefile
scws-1.2.2/libscws/: Makefile  xtree.c
scws-1.2.2/libscws/.deps/: charset.Plo  darray.Plo  lock.Plo  pool.Plo  rule.Plo  scws.Plo  xdb.Plo  xdict.Plo  xtree.Plo
sql/: scws_parser.sql
src/: scws_parser.c  scws_parser.h
util/: Makefile  Makefile.in  config.h  config.status  configure  configure.ac  libtool
util/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
util/src/: Makefile  Makefile.am  Makefile.in  lex_descr.c  lex_descr.h  main.c
util/src/.deps/: lex_descr.Po  main.Po
